--- a/portfolio.html
+++ b/portfolio.html
@@ -27,9 +27,17 @@
                  <li class="nav-item"><a href="" class="link">Контакты</a></li>
               </ul>
          </nav>
-           <address class="address-links">
-            <a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a>
-            <a href="tel:+38-096-111-11-11" class="phone-link">+38 096 111 11 11</a>
+         <address class="address-links">
+            <a href="mailto:info@devstudio.com" class="mail-link">
+                <svg class="icon-envelope">
+                    <use href="./images/icon/sprite.svg#envelope"></use>
+               </svg>
+               <span class="mail-address">info@devstudio.com</span></a>
+            <a href="tel:+38-096-111-11-11" class="phone-link">
+                <svg class="icon-phone">
+                    <use href="./images/icon/sprite.svg#phone"></use>
+               </svg>
+                <span class="phone-number">+38 096 111 11 11</span></a>
            </address>
      </div>           
  </header>
@@ -126,20 +134,47 @@
 </main>
 
 <footer class="footer">
-    <div class="container">
-        <div class="content-box">
-     <img class="footer-logo"
-          src="images/logofooter.svg" alt="Логотип Web Studio написан латинскими буквами.
-          Слово Web голубого цвета, слово Studio белого цвета"
-     >
-     <address class="address-links">
-           <p class="footer-real-address">г. Киев, пр-т Леси Украинки, 26</p> <br>
-           <a href="mailto:info@example.com" class="mail-link">info@example.com</a>
-           <br>
-           <a href="tel:+38-099-111-11-11" class="phone-link">+38 099 111 11 11</a>
-     </address>
-    </div>
-    </div>
+   <div class="container flexbox">
+       
+   <div class="grid address-box">
+      <img class="footer-logo"
+           src="images/logofooter.svg" alt="Логотип Web Studio написан латинскими буквами.
+           Слово Web голубого цвета, слово Studio , белого цвета"
+         >
+      <address class="address-links">
+            <p class="footer-real-address">г. Киев, пр-т Леси Украинки, 26</p> <br>
+            <a href="mailto:info@example.com" class="mail-link">info@example.com</a>
+            <br> 
+            <a href="tel:+38-099-111-11-11" class="phone-link">+38 099 111 11 11</a>
+      </address>
+   </div>
+
+   <div class="links-box">
+       <p class="actions-footer">Присоединяйтесь</p>
+     <ul class="list social-links">
+         <li class="social-item">
+             <a class="social-icon-link" href="https://www.instagram.com/" aria-label="ссылка Инстаграм">
+               <svg class="icon instagram"><use href="./images/icon/sprite.svg#instagram"></use></svg>
+           </a>
+         </li>
+         <li class="social-item">
+             <a class="social-icon-link" href="https://twitter.com/">
+               <svg class="icon twitter"><use href="./images/icon/sprite.svg#twitter"></use></svg>
+           </a>
+         </li>
+         <li class="social-item">
+             <a class="social-icon-link" href="https://facebook.com/">
+               <svg class="icon facebook"><use href="./images/icon/sprite.svg#facebook"></use></svg>
+           </a>
+         </li>
+         <li class="social-item">
+             <a class="social-icon-link" href="https://www.linkedin.com/">
+               <svg class="icon linkedin"><use href="./images/icon/sprite.svg#linkedin"></use></svg>
+           </a>
+         </li>
+     </ul>
+   </div>  
+   </div>
 </footer>
 
   </body>
